# ab0t-quota

./: .dockerignore  .gitignore  .gitleaks.toml  ARCHITECTURE.md  README-dev.md  README.md  VISION.md  pyproject.toml  quota-config.example.json
Skills/billing-payment-integration/: SKILL.md
Skills/quota-billing-module/: SKILL.md
Skills/quota-multi-tenant/: SKILL.md
Skills/quota-paid-tier-onboarding/: SKILL.md
Skills/quota-service-integration/: SKILL.md
Skills/quota-tier-management/: SKILL.md
Skills/quota-troubleshooting/: SKILL.md
ab0t_quota/: __init__.py  __main__.py  alerts.py  auth_events.py  bridge.py  caches.py  config.py  engine.py  messages.py  middleware.py  persistence.py  providers.py  registry.py  setup.py  tiers.py
ab0t_quota/billing/: ARCHITECTURE_DECISION.md  BILLING_INTEGRATION.md  __init__.py  auth_helpers.py  budget.py  clients.py  config.py  heartbeat.py  lifecycle.py  models.py  router.py
ab0t_quota/counters/: __init__.py  accumulator.py  base.py  factory.py  gauge.py  rate.py
ab0t_quota/models/: __init__.py  core.py  increase_requests.py  requests.py  responses.py
docs/: auth-events.md  deployment.md  mesh-quota-api.md  quickstart.md
scripts/: install-hooks.sh  pre-publish.sh  push.sh
tests/: test_alerts.py  test_auth_events.py  test_bridge.py  test_caches.py  test_config.py  test_counters.py  test_engine.py  test_messages.py  test_middleware.py  test_models.py  test_persistence_sync_worker.py  test_persistence_validation.py  test_providers.py  test_setup.py  test_tier_catalog_publish.py
tests/billing/: test_clients.py  test_lifecycle.py  test_models.py  test_router.py
tickets/20260428_canonical_plans_in_lib/: CONTEXT.md  TICKET.md  (+4 more)
(+15 files in other folders)
